# crepe-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
src/crepe_mcp/: __init__.py  compiler.py  exporter.py  renderer.py  research.py  server.py  store.py
tests/: validate_all.py
