[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crepe-mcp"
version = "0.1.0"
description = "CREPE — Compile, Research, Export, Presentation Engine. An MCP server for AI Agents that drafts slide decks in Pandoc Markdown, compiles them to Beamer PDF or PowerPoint, renders PNGs for visual validation, and pulls research from Semantic Scholar, the web, and Wikipedia."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "presentation", "pandoc", "beamer", "pptx", "research"]
dependencies = [
    "fastmcp>=2.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "aspose-slides>=24.0",
]

[project.urls]
Repository = "https://github.com/mariolpantunes/crepe-mcp"
Issues = "https://github.com/mariolpantunes/crepe-mcp/issues"

[project.scripts]
crepe-mcp = "crepe_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crepe_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
